# gnurobots

./: .gitignore  AUTHORS  COPYING  ChangeLog  ChangeLog.old  Makefile.am  NEWS  README  THANKS  TODO  bootstrap.sh  config.h.in  configure.ac
contrib/: Makefile.am  mapedit.c
doc/: Makefile.am  Robots-HOWTO  contrib  guile-proj.scm
getopt/: Makefile.am  getopt.c  getopt.h  getopt1.c
include/: Makefile.am  api.h  configs.h  grobot.h  main.h  map.h  sign.h  ui-arena.h  ui-cmdwin.h  ui-window-private.h  ui-window.h  userinterface.h
lib/: Makefile.am  cursesplugin.c  cursesplugin.h  textplugin.c  textplugin.h  x11plugin.c  x11plugin.h
lib/xpm/: Makefile.am  prize.xpm  robot.xpm  robot_east.xpm  robot_south.xpm  wall.xpm
maps/: Makefile.am  maze.map  pattern.map  small.map
scheme/: Makefile.am  beep.scm  greedy.scm  mapper.scm  simple.scm  stop.scm  zap.scm
src/: Makefile.am  api.c  grobot.c  main.c  map.c  sign.c  ui-arena.c  ui-cmdwin.c  ui-window.c  userinterface.c
ui/: Makefile.am  design.glade  main.c  ui-arena.c  ui-arena.h  ui-cmdwin.c  ui-window-private.h  ui-window.c  ui-window.h  uitest
xpm/: Makefile.am  baddie.xpm  food.xpm  prize.xpm  robot_east.xpm  robot_north.xpm  robot_west.xpm  space.xpm  statusbar.xpm  wall.xpm
